# CntxtCS

./: .env.example  .gitignore  CntxtCS.py  DESIGN.md  PRODUCT.md  README.md  mcp_server.py  pyproject.toml  surreal_storage.py  web_server.py
.impeccable/: design.json
.impeccable/critique/: 2026-05-19T11-51-32Z__ui-src.md  2026-05-19T11-51-40Z__ui-src.md
.playwright-mcp/: page-2026-05-19T06-43-07-338Z.yml  page-2026-05-19T06-43-21-763Z.yml  page-2026-05-19T07-09-27-426Z.yml
plans/: surrealdb-mcp-complete.md  surrealdb-mcp-plan.md  ui-five-fixes-complete.md  ui-five-fixes-phase-1-complete.md  ui-five-fixes-phase-2-complete.md  ui-five-fixes-phase-3-complete.md  ui-five-fixes-phase-4-complete.md  ui-five-fixes-phase-5-complete.md  ui-five-fixes-plan.md
tests/: test_integration.py  test_mcp_server.py  test_surreal_storage.py  test_web_server.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/common/: EmptyState.tsx
ui/src/components/common/__tests__/: EmptyState.test.tsx
ui/src/components/explorer/: ClassTable.tsx  FileTree.tsx  InterfaceTable.tsx  NamespaceList.tsx
ui/src/components/graph/: GraphCanvas.tsx  NodeTypeFilter.tsx
ui/src/components/layout/: AppShell.tsx  PageTitle.tsx  ProjectSelector.tsx  Sidebar.tsx
ui/src/components/stats/: DependencyList.tsx  MetricGroup.tsx  StatCard.tsx
ui/src/pages/: DashboardPage.tsx  ExplorerPage.tsx  GraphPage.tsx
ui/src/pages/__tests__/: DashboardPage.emptystate.test.tsx  DashboardPage.metricgroup.test.tsx  DashboardPage.test.tsx  ExplorerPage.test.tsx
(+4 files in other folders)
