[project]
name = "cntxtcs"
version = "0.1.0"
description = "C# codebase analyzer with SurrealDB knowledge graph and MCP server"
requires-python = ">=3.11"
dependencies = [
    "surrealdb>=2.0.0",
    "mcp[cli]>=1.13.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "watchdog>=4.0",
]

[project.scripts]
cntxtcs = "CntxtCS:main"
cntxtcs-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
